--- a/public/private/webvr01.html
+++ b/public/private/webvr01.html
@@ -2,7 +2,7 @@
       margin: 0;
       overflow: hidden;
     }
-    .output {
+    .output, .fail {
       position: absolute;
       height: 100px;
       line-height: 100px;
@@ -13,6 +13,9 @@
       color: white;
       border: 1px solid lightgray;
       box-sizing: border-box;
+    }
+    .fail {
+      color: red;
     }
     #logger {
       width: 100%;
@@ -34,7 +37,7 @@
       FORCE_ENABLE_VR: true,
       MOUSE_KEYBOARD_CONTROLS_DISABLED: true,
       DEFER_INITIALIZATION: true
-    };</script><script src="webvr-polyfill.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script></head><body><div id="logger" class="output"></div><div id="counter" class="output" contenteditable>300</div><script>(function() {
+    };</script><script src="webvr-polyfill.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script></head><body><div id="logger" class="output">Animate</div><div id="counter" class="output" contenteditable>300</div><script>(function() {
       'use strict';
 
       var scene = new THREE.Scene();
@@ -80,7 +83,7 @@
                 log('Enter VR');
               }
             } else {
-              log('No VR display');
+              log('Fail: No VR display');
             }
           }, function() {
             log('getVRDisplays failed');
@@ -100,7 +103,7 @@
               log('requestPresent failed');
             });
           } else {
-            log('!canPresent');
+            log('Fail: !canPresent');
           }
         } else {
           window.requestAnimationFrame(onAnimationFrame);
@@ -150,6 +153,11 @@
 
       function log(comment) {
         logger.textContent = comment;
+        if (comment.toLowerCase().indexOf('fail') > -1) {
+          logger.className = 'fail';
+        } else {
+          logger.className = 'output';
+        }
       }
 
       function countDown() {
