--- a/src/private/index.html
+++ b/src/private/index.html
@@ -21,6 +21,9 @@
       padding: 8px;
       box-shadow: 1px 1px 5px gray;
     }
+    a {
+      text-decoration: none;
+    }
     a, a:visited {
       color: black;
     }
@@ -34,66 +37,37 @@
   </head>
   <body>
     <ul style="font-family: Helvetica, Arial; font-size: 16pt;">
-      <li><a href="scroll17.html"
-        style="text-decoration: none;">My Yahoo reduction</a></li>
-      <li><a href="scroll02.html"
-        style="text-decoration: none;">My Yahoo reduction (fixed bg case only)</a></li>
-      <li><a href="scroll04.html"
-        style="text-decoration: none;">Newegg reduction</a></li>
-      <li><a href="scroll05.html"
-        style="text-decoration: none;">BillPay reduction</a></li>
-      <li><a href="scroll07.html"
-        style="text-decoration: none;">Scroll event callbacks</a></li>
-      <li><a href="scroll08.html"
-        style="text-decoration: none;">NegZ repro</a></li>
-      <li><a href="scroll09.html"
-        style="text-decoration: none;">NegZ not visible (opacity zero)</a></li>
-      <li><a href="scroll10.html"
-        style="text-decoration: none;">Parallax scrolling demo reduction 1</a></li>
-      <li><a href="scroll18.html"
-        style="text-decoration: none;">Parallax scrolling demo reduction 2</a></li>
-      <li><a href="scroll13.html"
-        style="text-decoration: none;">Bg-clip repro</a></li>
-      <li><a href="scroll14.html"
-        style="text-decoration: none;">Fixed bg table</a></li>
-      <li><a href="scroll15.html"
-        style="text-decoration: none;">Invert outline color</a></li>
-      <li><a href="scroll16.html"
-        style="text-decoration: none;">MIUI reduction</a></li>
-      <li><a href="scroll20.html"
-        style="text-decoration: none;">Preserve 3D transform style</a></li>
-      <li><a href="preserve3d01.html"
-        style="text-decoration: none;">Cube</a></li>
-      <li><a href="preserve3d02.html"
-        style="text-decoration: none;">Bing images</a></li>
-      <li><a href="scroll01.html"
-        style="text-decoration: none;">CSS Filter Effects</a></li>
-      <li><a href="filter01.html"
-        style="text-decoration: none;">Dependent hue-rotate effect</a></li>
-      <li><a href="filter02.html"
-        style="text-decoration: none;">Fixed-bg and sepia effect</a></li>
-      <li><a href="filter03.html"
-        style="text-decoration: none;">Fixed-bg and effect unset</a></li>
-      <li><a href="filter04.html"
-        style="text-decoration: none;">Blur on container, inline element and in table</a></li>
-      <li><a href="https://developer.mozilla.org/samples/webgl/sample6/index.html"
-        style="text-decoration: none;">WebGL demo <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
-      <li><a href="svgasimg01.html"
-        style="text-decoration: none;">SVG-as-image</a></li>
-      <li><a href="Z6310H.html"
-        style="text-decoration: none;">Site issue with touch</a></li>
-      <li><a href="mobile-parallax.html"
-        style="text-decoration: none;">Mobile parallax</a></li>
-      <li><a href="mobile-parallax-fixedbg.html"
-        style="text-decoration: none;">Mobile parallax (fixed background)</a></li>
-      <li><a href="allowvr01.html"
-        style="text-decoration: none;">Allow VR 1 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
-      <li><a href="allowvr02.html"
-        style="text-decoration: none;">Allow VR 2 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
-      <li><a href="allowvr03.html"
-        style="text-decoration: none;">Allow VR 3 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
-      <li><a href="webvr01.html"
-        style="text-decoration: none;">Web VR 1</a></li>
+      <li><a href="scroll17.html">My Yahoo reduction</a></li>
+      <li><a href="scroll02.html">My Yahoo reduction (fixed bg case only)</a></li>
+      <li><a href="scroll04.html">Newegg reduction</a></li>
+      <li><a href="scroll05.html">BillPay reduction</a></li>
+      <li><a href="scroll07.html">Scroll event callbacks</a></li>
+      <li><a href="scroll08.html">NegZ repro</a></li>
+      <li><a href="scroll09.html">NegZ not visible (opacity zero)</a></li>
+      <li><a href="scroll10.html">Parallax scrolling demo reduction 1</a></li>
+      <li><a href="scroll18.html">Parallax scrolling demo reduction 2</a></li>
+      <li><a href="scroll13.html">Bg-clip repro</a></li>
+      <li><a href="scroll14.html">Fixed bg table</a></li>
+      <li><a href="scroll15.html">Invert outline color</a></li>
+      <li><a href="scroll16.html">MIUI reduction</a></li>
+      <li><a href="scroll20.html">Preserve 3D transform style</a></li>
+      <li><a href="preserve3d01.html">Cube</a></li>
+      <li><a href="preserve3d02.html">Bing images</a></li>
+      <li><a href="scroll01.html">CSS Filter Effects</a></li>
+      <li><a href="filter01.html">Dependent hue-rotate effect</a></li>
+      <li><a href="filter02.html">Fixed-bg and sepia effect</a></li>
+      <li><a href="filter03.html">Fixed-bg and effect unset</a></li>
+      <li><a href="filter04.html">Blur on container, inline element and in table</a></li>
+      <li><a href="https://developer.mozilla.org/samples/webgl/sample6/index.html">WebGL demo <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
+      <li><a href="svgasimg01.html">SVG-as-image</a></li>
+      <li><a href="Z6310H.html">Site issue with touch</a></li>
+      <li><a href="mobile-parallax.html">Mobile parallax</a></li>
+      <li><a href="mobile-parallax-fixedbg.html">Mobile parallax (fixed background)</a></li>
+      <li><a href="allowvr01.html">Allow VR 1 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
+      <li><a href="allowvr02.html">Allow VR 2 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
+      <li><a href="allowvr03.html">Allow VR 3 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
+      <li><a href="webvr01.html">Web VR 1</a></li>
+      <li><a href="webvr_cubes.html">Web VR 2</a> (<a href="https://threejs.org/examples/" target="_blank">three.js / examples / webvr / cubes <i class="fa fa-external-link" aria-hidden="true"></i></a>)</li>
     </ul>
   </body>
 </html>
