--- a/public/private/webvr01.html
+++ b/public/private/webvr01.html
@@ -37,7 +37,7 @@
       FORCE_ENABLE_VR: true,
       MOUSE_KEYBOARD_CONTROLS_DISABLED: true,
       DEFER_INITIALIZATION: true
-    };</script><script src="webvr-polyfill.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script></head><body><div id="logger" class="output">Animate</div><div id="counter" class="output" contenteditable>300</div><script>(function() {
+    };</script><script src="webvr-polyfill.min.js"></script><script src="three/three.min.js"></script></head><body><div id="logger" class="output">Animate</div><div id="counter" class="output" contenteditable>300</div><script>(function() {
       'use strict';
 
       var scene = new THREE.Scene();
