--- a/src/private/webvr01.html
+++ b/src/private/webvr01.html
@@ -49,7 +49,7 @@
     };
     </script>
     <script src="webvr-polyfill.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
+    <script src="three/three.min.js"></script>
   </head>
   <body>
     <div id="logger" class="output">Animate</div>
