--- a/public/private/webvr_cubes.html
+++ b/public/private/webvr_cubes.html
@@ -13,11 +13,9 @@
     ALWAYS_APPEND_POLYFILL_DISPLAY: true,
     DIRTY_SUBMIT_FRAME_BINDINGS: true,
     BUFFER_SCALE: 0.75,
-  };</script><script src="webvr-polyfill.min.js"></script><script src="three/three.min.js"></script><script src="three/VRControls.js"></script><script src="three/VREffect.js"></script><script src="three/WebVR.js"></script></head><body><script>if (!navigator.getVRDisplays) {
-    InitializeWebVRPolyfill();
-  }
-  if (WEBVR.isLatestAvailable() === false) {
+  };</script><script src="webvr-polyfill.min.js"></script><script src="three/three.min.js"></script><script src="three/VRControls.js"></script><script src="three/VREffect.js"></script><script src="three/WebVR.js"></script></head><body><script>if (WEBVR.isLatestAvailable() === false) {
     document.body.appendChild(WEBVR.getMessage());
+    InitializeWebVRPolyfill();
   }
 
   var clock = new THREE.Clock();
@@ -149,8 +147,7 @@
   function onWindowResize() {
     camera.aspect = window.innerWidth / window.innerHeight;
     camera.updateProjectionMatrix();
-
-    effect.setSize( window.innerWidth, window.innerHeight );
+    effect.setSize(window.innerWidth, window.innerHeight);
   }
 
   function animate() {
