--- a/public/private/index.html
+++ b/public/private/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="/css/font-awesome.min.css"><style>body {
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="fa/css/font-awesome.min.css"><style>body {
       margin: 0;
       padding: 0 8px 8px 0;
     }
