--- a/public/private/webvr01.html
+++ b/public/private/webvr01.html
@@ -77,11 +77,7 @@
           .then(function(displays) {
             if (displays.length > 0) {
               vrDisplay = displays[displays.length - 1];
-              if (usePolyfill) {
-                log('Enter VR (Polyfill)');
-              } else {
-                log('Enter VR');
-              }
+              log('Enter VR');
             } else {
               log('Fail: No VR display');
             }
@@ -160,6 +156,7 @@
       }
 
       function log(comment) {
+        if (usePolyfill) { comment += ' (Polyfill)' }
         logger.textContent = comment;
         if (comment.toLowerCase().indexOf('fail') > -1) {
           logger.className = 'fail';
