--- a/src/private/webvr01.html
+++ b/src/private/webvr01.html
@@ -60,14 +60,22 @@
 
       var scene = new THREE.Scene();
       var camera = new THREE.PerspectiveCamera(
-        75, window.innerWidth / window.innerHeight, 0.1, 1000);
-      var renderer = new THREE.WebGLRenderer();
-      var geometry = new THREE.CylinderGeometry(2, 2, 2, 64);
-      var material = new THREE.MeshBasicMaterial({
-        color: 0x00ff00,
-        wireframe: true
-      });
-      var cylinder = new THREE.Mesh(geometry, material);
+        70, window.innerWidth / window.innerHeight, 0.1, 10);
+      var room = new THREE.Mesh(
+        new THREE.BoxGeometry(6, 6, 6, 8, 8, 8),
+        new THREE.MeshBasicMaterial({
+          color: 0x404040,
+          wireframe: true
+        })
+      );
+      var cylinder = new THREE.Mesh(
+        new THREE.CylinderGeometry(2, 2, 2, 64),
+        new THREE.MeshBasicMaterial({
+          color: 0x00ff00,
+          wireframe: true
+        })
+      );
+      var renderer = new THREE.WebGLRenderer({antialias: true});
       var webglCanvas = null;
       var vrDisplay = null;
       var usePolyfill = !navigator.getVRDisplays;
@@ -76,7 +84,8 @@
 
       webglCanvas = renderer.domElement;
       document.body.appendChild(webglCanvas);
-      scene.add(cylinder);
+      room.add(cylinder);
+      scene.add(room);
       resize();
       render();
 
@@ -149,7 +158,27 @@
       }
 
       function position() {
-        camera.position.set(0, 0, 5);
+        cylinder.position.set(0, 0, -5);
+        var pose = {};
+        if (vrDisplay) {
+          var frameData = null;
+          if (vrDisplay.getFrameData) {
+            vrDisplay.getFrameData(frameData);
+          }
+          if (frameData) {
+            pose = frameData.pose;
+          } else if (vrDisplay.getPose) {
+            pose = vrDisplay.getPose();
+          }
+        }
+        if (pose.orientation) {
+          camera.quaternion.fromArray(pose.orientation);
+        }
+        if (pose.position) {
+          camera.position.fromArray(pose.position);
+        } else {
+          camera.position.set(0, 0, 0);
+        }
       }
 
       function render() {
