--- a/src/private/webvr_cubes.html
+++ b/src/private/webvr_cubes.html
@@ -46,7 +46,7 @@
   <script src="three/WebVR.js"></script>
 </head>
 <body>
-  <div id="counter" class="output" contenteditable>Infinity</div>
+  <div id="counter" contenteditable>Infinity</div>
   <script>
   if (WEBVR.isLatestAvailable() === false) {
     document.body.appendChild(WEBVR.getMessage());
