--- a/public/private/webvr_cubes.html
+++ b/public/private/webvr_cubes.html
@@ -27,9 +27,8 @@
     overflow: scroll;
     padding: 104px 8px 8px 8px;
   }
-  #counter {
+  #counter, #showLog {
     position: absolute;
-    width: 100px;
     height: 50px;
     line-height: 50px;
     vertical-align: middle;
@@ -40,13 +39,21 @@
     border: 1px solid lightgray;
     box-sizing: border-box;
     z-index: 1000;
+  }
+  #counter {
+    width: 100px;
+  }
+  #showLog {
+    left: 100px;
+    width: 50px;
+    cursor: pointer;
   }</style><script>var WebVRConfig = {
     FORCE_ENABLE_VR: true,
     DEFER_INITIALIZATION: true,
     ALWAYS_APPEND_POLYFILL_DISPLAY: true,
     DIRTY_SUBMIT_FRAME_BINDINGS: true,
     BUFFER_SCALE: 0.75,
-  };</script><script src="webvr-polyfill.min.js"></script><script src="three/three.min.js"></script><script src="three/VRControls.js"></script><script src="three/VREffect.js"></script><script src="three/WebVR.js"></script></head><body><div id="log" class="hidden"></div><div id="counter" contenteditable>Infinity</div><script>console.warn = override('warn');
+  };</script><script src="webvr-polyfill.min.js"></script><script src="three/three.min.js"></script><script src="three/VRControls.js"></script><script src="three/VREffect.js"></script><script src="three/WebVR.js"></script></head><body><div id="log" class="hidden"></div><div id="counter" contenteditable>Infinity</div><div id="showLog">Log</div><script>console.warn = override('warn');
   console.error = override('error');
 
   if (!WEBVR.isAvailable()) {
@@ -184,7 +191,8 @@
     renderer.domElement.addEventListener('touchend', onMouseUp, false);
 
     window.addEventListener('resize', onWindowResize, false);
-    window.addEventListener('keydown', showHideLog, false);
+    document.getElementById('showLog')
+    .addEventListener('click', showHideLog, false);
   }
 
   function onMouseDown() {
@@ -282,14 +290,12 @@
     effect.render(scene, camera);
   }
 
-  function showHideLog(args) {
-    if (args.code === 'Space') {
-      var log = document.getElementById('log');
-      if (log.className === 'hidden') {
-        log.className = null;
-      } else {
-        log.className = 'hidden';
-      }
+  function showHideLog() {
+    var log = document.getElementById('log');
+    if (log.className === 'hidden') {
+      log.className = null;
+    } else {
+      log.className = 'hidden';
     }
   }
 
