--- a/src/private/webvr_cubes.html
+++ b/src/private/webvr_cubes.html
@@ -32,7 +32,7 @@
     font-size: 11pt;
     box-sizing: border-box;
     overflow: scroll;
-    padding: 104px 8px 8px 8px;
+    padding: 10em 8px 8px 8px;
   }
   #counter, #showLog {
     position: absolute;
@@ -54,6 +54,7 @@
     left: 100px;
     width: 50px;
     cursor: pointer;
+    user-select: none;
   }
   </style>
   <script>
