--- a/src/private/index.html
+++ b/src/private/index.html
@@ -67,6 +67,7 @@
       <li><a href="allowvr02.html">Allow VR 2 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
       <li><a href="allowvr03.html">Allow VR 3 <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
       <li><a href="webvr_cubes.html">WebVR</a> (<a href="https://threejs.org/examples/" target="_blank">three.js / examples / webvr / cubes <i class="fa fa-external-link" aria-hidden="true"></i></a>)</li>
+      <li><a href="tumblr.html">tumblr reduction</a></li>
     </ul>
   </body>
 </html>
